# memory-z-rag

./: .gitignore  README.md  config.py  eval_qa.py  eval_recon.py  eval_retrieval.py  model.py  prepare_data.py  pyproject.toml  run.sh  train.py
data/: __init__.py  add_summary.py  data.ipynb  loader.py  prepare_data.py  segment.py
eval/: model_loader.py  qa.py  qa_baseline.py  qa_utils.py  recon.py  retrieval.py  retrieval_baseline.py  retrieval_baseline_v66.py  retrieval_v66.py  retrievers.py
experiments/v55_summary_recon/: README.md  config.py  run.sh
experiments/v56_triviaqa_recon/: README.md  config.py  run.sh
experiments/v57_summary_50docs/: README.md  config.py  run.sh
experiments/v58_text_50docs/: README.md  config.py  run.sh
experiments/v59_summary_contrastive/: README.md  config.py
experiments/v60_warmup_sgd/: README.md  config.py
experiments/v61_warmup_summary/: README.md  config.py
experiments/v62_summary_contrastive/: README.md  config.py  qa_combined.py  retrieval_combined.py
experiments/v63_text_5docs/: README.md  config.py
experiments/v64_baselines/: README.md
experiments/v64_baselines/bm25/: qa.json  retrieval.json
experiments/v65_mlp_projector/: README.md  config.py
experiments/v66_answer_hit/: README.md
experiments/v67_continual/: config.py
experiments/v68_3b_ablation/: config.py
loss/: __init__.py  contrastive.py  nll.py
metrics/: __init__.py  rouge.py  token_f1.py  utils.py
model/: __init__.py  projector.py  z_model.py
retrieval/: __init__.py  bm25.py  dense.py
train/: checkpoint.py  run.py
(+63 files in other folders)
